# campo

./: CMakeLists.txt  CONTRIBUTING.md  LICENSE.txt  README.md
.github/workflows/: main.yaml  main.yml
documentation/: CMakeLists.txt  conf.py.in  index.rst  pip.rst.in
documentation/general/: CMakeLists.txt  changes.rst  concepts.rst  indices.rst  install.rst  introduction.rst  sourcecode.rst
documentation/operations/: dataframe.rst  index.rst
environment/cmake/: CampoPackaging.cmake  CampoPackagingExclude.cmake
environment/conda/: campo.yaml  environment.yaml
environment/configuration/: campo_dev.yaml  conda_environment.yaml
source/: CMakeLists.txt  campo.yaml.in  environment.yaml.in  setup.py.in
source/campo/: CMakeLists.txt  __about__.py.in  __init__.py  areas.py  config.py  dataframe.py  dataset.py  phenomenon.py  points.py  property.py  propertyset.py  utils.py  values.py
source/campo/op_experimental/: __init__.py  export.py  focal.py  local.py  move_closest_dest.py  network.py  randommove.py  rasterize.py  window.py  zonal.py
source/campo/op_fieldagents/: __init__.py  operations.py  operators.py
source/campo/op_fields/: operations.py
source/test/: CMakeLists.txt  extract_const_diff.py  extract_const_same.py  extract_dyn_diff.py  extract_dyn_same.py  test_dataframe.py  test_dynamic_model.py  test_mobile_agents.py  test_phenomenon.py  test_property.py  test_propertyset.py  unit_tests.py
